@@ -1,3 +1,7 @@
+2011-04-06 Ingo Renner  <ingo@typo3.org>
+
+	* Added EXT:tika configuration checking when clearing the configuration cache
+
 2010-10-18 Ingo Renner  <ingo@typo3.org>
 
 	* Fixed the manual rendering / headline structure... <put some OOo is crap rant here>
